[gd_scene load_steps=40 format=2]

[ext_resource path="res://gfx/fonts/spelunkid_font.tres" type="BitmapFont" id=1]
[ext_resource path="res://gfx/fonts/spelunkid_font_bold.tres" type="BitmapFont" id=2]
[ext_resource path="res://gfx/fonts/numerics_5x8.tres" type="BitmapFont" id=3]
[ext_resource path="res://gfx/fonts/numerics_7seg.tres" type="BitmapFont" id=4]
[ext_resource path="res://ui/BindWindow.stylebox" type="StyleBox" id=5]
[ext_resource path="res://gfx/ui/godot_icons/Add.svg" type="Texture" id=6]
[ext_resource path="res://gfx/ui/godot_icons/Remove.svg" type="Texture" id=7]
[ext_resource path="res://gfx/ui/godot_icons/Load.svg" type="Texture" id=8]
[ext_resource path="res://gfx/ui/vu/minmax_slider_label.png" type="Texture" id=9]
[ext_resource path="res://gfx/ui/vu/ruler16.png" type="Texture" id=10]
[ext_resource path="res://ui/responseCurve/PresetMenu.theme" type="Theme" id=11]
[ext_resource path="res://ui/responseCurve/bg.gd" type="Script" id=12]
[ext_resource path="res://ui/responseCurve/ResponseCurve.gd" type="Script" id=13]
[ext_resource path="res://ui/responseCurve/SplitAuxillary.gd" type="Script" id=14]
[ext_resource path="res://ui/responseCurve/Split.gd" type="Script" id=15]
[ext_resource path="res://ui/responseCurve/CustomCurvePopup.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/responseCurve/btnPresets.gd" type="Script" id=17]
[ext_resource path="res://ui/responseCurve/MinMaxColorizer.shader" type="Shader" id=18]
[ext_resource path="res://gfx/ui/vu/response_curve.png" type="Texture" id=19]
[ext_resource path="res://ref/KeyFollow_ui.png" type="Texture" id=20]
[ext_resource path="res://gfx/ui/vu/ruler24.png" type="Texture" id=21]
[ext_resource path="res://gfx/ui/godot_icons/icon_curve_out.svg" type="Texture" id=22]
[ext_resource path="res://gfx/ui/godot_icons/icon_curve_in_out.svg" type="Texture" id=23]
[ext_resource path="res://gfx/ui/vu/tick.png" type="Texture" id=24]
[ext_resource path="res://gfx/ui/icon_12th_root.svg" type="Texture" id=25]
[ext_resource path="res://gfx/ui/vu/btnPreset1.png" type="Texture" id=26]
[ext_resource path="res://gfx/ui/vu/grabber.png" type="Texture" id=27]
[ext_resource path="res://gfx/ui/vu/btnPreset2.png" type="Texture" id=28]
[ext_resource path="res://gfx/ui/godot_icons/icon_curve_in.svg" type="Texture" id=29]
[ext_resource path="res://gfx/ui/godot_icons/icon_curve_out_in.svg" type="Texture" id=30]
[ext_resource path="res://gfx/ui/godot_icons/icon_curve_linear.svg" type="Texture" id=31]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 6.0
expand_margin_right = 4.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0627451, 0.254902, 0.356863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_right = 4.0
expand_margin_top = 2.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 16, 24 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 16, 24 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0941176, 0.156863, 0.254902, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 5.0
expand_margin_top = 3.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0705882, 0.117647, 0.215686, 0.627451 )
expand_margin_left = 1.0
expand_margin_right = 3.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0705882, 0.117647, 0.192157, 0.498039 )
expand_margin_left = 1.0
expand_margin_right = 3.0

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 18 )
shader_param/disabled = 2

[node name="ResponseCurve" type="WindowDialog"]
margin_right = 576.0
margin_bottom = 304.0
rect_min_size = Vector2( 320, 304 )
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 13 )

[node name="response_curve" type="TextureRect" parent="."]
modulate = Color( 0.466667, 0.670588, 1, 1 )
margin_left = 16.0
margin_right = 104.0
margin_bottom = 7.0
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VU" type="Panel" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 544.0
margin_bottom = 272.0
hint_tooltip = "[Table not set]"
custom_styles/panel = SubResource( 2 )
script = ExtResource( 12 )

[node name="ToolTipProto" type="Label" parent="VU"]
visible = false
margin_left = -104.0
margin_right = -54.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.352941, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "0ff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueRuler" type="TextureRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 26.0
margin_bottom = 273.0
texture = ExtResource( 10 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OctaveRuler" type="TextureRect" parent="."]
modulate = Color( 0.376471, 0.376471, 0.376471, 1 )
margin_left = 32.0
margin_top = 276.0
margin_right = 287.0
margin_bottom = 286.0
texture = ExtResource( 21 )
stretch_mode = 2
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblValue" type="Label" parent="."]
margin_left = 6.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = 288.0
grow_horizontal = 0
custom_constants/line_spacing = 0
custom_fonts/font = ExtResource( 3 )
text = "63



56



48



40



32



24



16



8



"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPresets" type="MenuButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 16.0
margin_right = -8.0
margin_bottom = 40.0
rect_min_size = Vector2( 16, 24 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
flat = false
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EaseSubmenu" type="PopupMenu" parent="btnPresets"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 138.0
theme = ExtResource( 11 )
items = [ "Linear", ExtResource( 31 ), 0, false, false, 0, 0, null, "", false, "In", ExtResource( 29 ), 0, false, false, 1, 0, null, "", false, "Out", ExtResource( 22 ), 0, false, false, 2, 0, null, "", false, "In-Out", ExtResource( 23 ), 0, false, false, 3, 0, null, "", false, "Out-In", ExtResource( 30 ), 0, false, false, 4, 0, null, "", false, "Even Temp", ExtResource( 25 ), 0, false, false, 5, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 288.0
margin_right = 80.0
margin_bottom = 302.0
mouse_filter = 0
custom_colors/font_color = Color( 0.14902, 0.501961, 0.6, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Octave"
valign = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblOctave" type="Label" parent="."]
margin_left = 80.0
margin_top = 288.0
margin_right = 296.0
margin_bottom = 302.0
mouse_filter = 0
custom_colors/font_color = Color( 0.15, 0.5025, 0.6, 1 )
custom_fonts/font = ExtResource( 1 )
text = "1  2  3  4  5  6  7  8  9  "
valign = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblVelocity" type="Label" parent="."]
visible = false
margin_left = 80.0
margin_top = 288.0
margin_right = 296.0
margin_bottom = 302.0
mouse_filter = 0
custom_colors/font_color = Color( 0.15, 0.5025, 0.6, 1 )
custom_fonts/font = ExtResource( 3 )
text = "32     48    64    80     96    112   127"
align = 2
valign = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinMax" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_top = 40.0
margin_bottom = 280.0
__meta__ = {
"_edit_group_": true
}

[node name="lblMinMax" type="Label" parent="MinMax"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -10.0
margin_right = 29.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0.188235, 0.631373, 0.752941, 1 )
custom_fonts/font = ExtResource( 3 )
text = "00/00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinMaxTexture" type="TextureRect" parent="MinMax"]
modulate = Color( 1, 1, 1, 0.65098 )
margin_left = 3.0
margin_top = 6.0
margin_right = 28.0
margin_bottom = 11.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sldMin" type="VSlider" parent="MinMax"]
anchor_bottom = 1.0
margin_top = 16.0
margin_right = 16.0
margin_bottom = -16.0
custom_icons/tick = ExtResource( 24 )
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 27 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sldMax" type="VSlider" parent="MinMax"]
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = 26.0
margin_bottom = -16.0
custom_icons/tick = ExtResource( 24 )
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 27 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area_highlight = SubResource( 7 )
custom_styles/grabber_area = SubResource( 8 )
tick_count = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colorizer" type="Panel" parent="MinMax"]
material = SubResource( 9 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomCurvePopup" parent="." instance=ExtResource( 16 )]
margin_left = 360.0
margin_top = 96.0
margin_right = 528.0
margin_bottom = 264.0

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 20 )

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = -21.0
margin_right = -24.0
margin_bottom = 6.0
custom_constants/separation = 4

[node name="MenuButton" type="MenuButton" parent="H"]
visible = false
margin_right = 27.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 0.513726 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0.403922, 0.509804, 1 )
custom_fonts/font = ExtResource( 3 )
text = ":::"
align = 2
items = [ "Add", ExtResource( 6 ), 0, false, false, 0, 0, null, "", false, "", null, 0, false, false, 1, 0, null, "", true, "Delete", ExtResource( 7 ), 0, false, false, 5, 0, null, "", false, "", null, 0, false, true, 3, 0, null, "", true, "import...", ExtResource( 8 ), 0, false, false, 4, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblTitle" type="Label" parent="H"]
margin_top = 9.0
margin_right = 288.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "[ Op3 ] RESONANCE Key Response Table"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Label" parent="H"]
margin_left = 292.0
margin_top = 9.0
margin_right = 552.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="MinMax/sldMin" to="." method="_on_sldMinMax_value_changed" binds= [ false ]]
[connection signal="value_changed" from="MinMax/sldMax" to="." method="_on_sldMinMax_value_changed" binds= [ true ]]
